# Double_Piper_Teleop

./: .gitignore  check_cuda.py  requirements.txt  tem.json
controller/: Piper_controller.py  arm_controller.py
data/: generate_lerobot.py
my_robot/: agilex_piper_isaacsim.py  agilex_piper_single_base.py  base_robot.py
piper_sdk/: piper_back_origin.py  piper_ctrl_moveJ_keyboard.py  piper_ctrl_moveP_keyboard.py  piper_ctrl_moveP_test.py  piper_enable_modeJ_after_tech.py  piper_gripper_delay_test.py
scripts/: filtered.py  (+11 more)
vla_infer/: README.md  __init__.py  client.py  pyproject.toml  requirements.txt  server.py  usage.md
vla_infer/example/OpenVLA-oft/: openvla-oft_server.py
vla_infer/example/dream-adapter/: dream-adapter-piper_client.py  dream-adapter_server.py
vla_infer/example/smolvla/: smolvla_piper_client.py  smolvla_server.py
vla_infer/example/vla-adapter/: piper_client.py  vla-adapter-piper_client.py  vla-adapter_server.py
vla_infer/models/: __init__.py  base.py  smolvla_model.py  vla_adapter_model.py
vla_infer/robots/: __init__.py  base.py  piper_single.py
vla_infer/src/: __init__.py
vla_infer/src/inference/: __init__.py  base.py  client.py  piper_client.py  server.py
vla_infer/src/models/: OpenVLA_OFT_model.py  __init__.py  base.py  dream_adapter_model.py  smolvla_model.py  vla_adapter_model.py
vla_infer/src/process/: __init__.py  action_preprocessor.py  base_process.py  image_preprocessor.py  util.py  utils.py
vla_infer/src/robots/: __init__.py  piper_single.py
vla_infer/src/zmq/: __init__.py  protocol.py  zmq_client.py  zmq_server.py
(+15 files in other folders)
